example/simple.yaml
apiVersion: ecc.aws.gotopple.com/v1alpha1
kind: Route
metadata:
  labels:
    controller-tools.k8s.io: "1.0"
  name: route-sample
spec:
  destinationCidrBlock: "0.0.0.0/0"
  routeTableName: routetable-sample
  gatewayName: internetgateway-sample
